--- a/style.css
+++ b/style.css
@@ -318,6 +318,10 @@ label {
   margin-right: 10px;
   cursor: pointer;
 }
+.color:active {
+    border: 2px solid transparent;
+    border-radius: 25%;
+}
 
 .color:last-child {
   background-color: darkblue;
@@ -425,93 +429,100 @@ footer {
 
 .fInput {
   padding: 5px;
+  border-radius: 15px;
+  border: 1px solid grey;
+  padding-left: 8px;
 }
 
+.fInput:focus {
+  outline: none;
+  box-shadow: 0px 0px 2px green;
+}
 .fButton {
   padding: 5px;
   background-color: black;
   color: white;
 }
 
-.fIcons{
+.fIcons {
   display: flex;
 }
 
-.fIcon{
+.fIcon {
   width: 20px;
   height: 20px;
   margin-right: 10px;
 }
 
-.copyright{
+.copyright {
   font-weight: 300;
   font-size: 14px;
 }
 
-@media screen and (max-width:480px) {
-  nav{
+@media screen and (max-width: 480px) {
+  nav {
     padding: 20px;
   }
 
-  .search{
+  .search {
     display: none;
   }
 
-  .navBottom{
+  .navBottom {
     flex-wrap: wrap;
   }
 
-  .menuItem{
+  .menuItem {
     margin: 20px;
     font-weight: 700;
     font-size: 20px;
   }
 
-  .slider{
+  .slider {
     clip-path: none;
   }
 
-  .sliderImg{
+  .sliderImg {
     width: 90%;
   }
 
-  .sliderBg{
+  .sliderBg {
     width: 100%;
     height: 100%;
   }
 
-  .sliderTitle{
+  .sliderTitle {
     display: none;
   }
 
-  .sliderPrice{
+  .sliderPrice {
     top: unset;
     bottom: -50;
     left: 0;
     background-color: lightgrey;
   }
 
-  .buyButton{
+  .buyButton {
     right: 0;
     top: 0;
   }
 
-  .features{
+  .features {
     flex-direction: column;
   }
 
-  .product{
-    clip-path: none ;
+  .product {
+    clip-path: none;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .productImg{
+  .productImg {
     width: 80%;
   }
 
-  .productDetails{
+  .productDetails {
     width: 100%;
     padding: 0;
     display: flex;
@@ -522,41 +533,41 @@ footer {
     top: 0;
   }
 
-  .productTitle{
+  .productTitle {
     font-size: 50px;
     margin: 0;
   }
 
-  .gallery{
+  .gallery {
     display: none;
   }
 
-  .newSeason{
+  .newSeason {
     flex-direction: column;
   }
 
-  .nsItem:nth-child(2){
+  .nsItem:nth-child(2) {
     padding: 50px;
   }
 
-  footer{
+  footer {
     flex-direction: column;
     align-items: center;
   }
 
-  .footerLeft{
+  .footerLeft {
     padding: 20px;
     width: 90%;
   }
 
-  .footerRight{
+  .footerRight {
     padding: 20px;
     width: 90%;
     align-items: center;
     background-color: whitesmoke;
   }
 
-  .payment{
+  .payment {
     width: 90%;
     padding: 20px;
   }
